--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -14,7 +14,7 @@
 
     <ul class="entries">
         {% for entry in entries %}
-            <li><h2>{{ entry.title }}</h2>{{ entry.text | safe }}</li>
+            <li><h2>{{ entry.title }}</h2>{{ entry.text }}</li>
         {% else %}
             <li><em>No entries found!</em></li>
         {% endfor %}
