Fix #5. Disable autocomplete on password field.

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
             <dt>Username:</dt>
             <dd><input type="text" name="username"/></dd>
             <dt>Password:</dt>
-            <dd><input type="password" name="password"/></dd>
+            <dd><input type="password" name="password" autocomplete="off"/></dd>
             <dd><input type="submit" value="Login"/></dd>
         </dl>
     </form>
