--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,10 +11,10 @@
         <div class="page">
             <h1>Flaskr</h1>
             <div class="metanav">
-                {% if not session.logged_in %}
-                    <a href="{{ url_for('login') }}">Login</a>
-                {% else %}
+                {% if current_user and current_user.is_authenticated %}
                     <a href="{{ url_for('logout') }}">Logout</a>
+                {% else %}
+                    <a href="{{ url_for('login') }}">Login</a>
                 {% endif %}
             </div>
 
