--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,19 +1,18 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h2>Login</h2>
+    <h2>Sign Up</h2>
 
     {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}</p>
     {% endif %}
 
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="{{ url_for('signup') }}" method="post">
         <dl>
             <dt>Username:</dt>
             <dd><input type="text" name="username"/></dd>
             <dt>Password:</dt>
             <dd><input type="password" name="password" autocomplete="off"/></dd>
-            <dd><input type="submit" value="Login"/></dd>
+            <dd><input type="submit" value="Sign Up"/></dd>
         </dl>
     </form>
-<p>Need an account? <a href="{{ url_for('signup') }}">Sign up!</a></p>
 {% endblock %}
