--- a/app/auth/templates/login.html
+++ b/app/auth/templates/login.html
@@ -6,7 +6,7 @@
         <p class="error"><strong>Error:</strong> {{ error }}</p>
     {% endif %}
 
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="{{ url_for('auth.login') }}" method="post">
         <dl>
             <dt>Username:</dt>
             <dd><input type="text" name="username"/></dd>
@@ -15,5 +15,5 @@
             <dd><input type="submit" value="Login"/></dd>
         </dl>
     </form>
-<p>Need an account? <a href="{{ url_for('signup') }}">Sign up!</a></p>
+<p>Need an account? <a href="{{ url_for('auth.signup') }}">Sign up!</a></p>
 {% endblock %}
