--- a/app/auth/templates/signup.html
+++ b/app/auth/templates/signup.html
@@ -6,7 +6,7 @@
         <p class="error"><strong>Error:</strong> {{ error }}</p>
     {% endif %}
 
-    <form action="{{ url_for('signup') }}" method="post">
+    <form action="{{ url_for('auth.signup') }}" method="post">
         <dl>
             <dt>Username:</dt>
             <dd><input type="text" name="username"/></dd>
