--- a/app/entry/templates/show_entries.html
+++ b/app/entry/templates/show_entries.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     {% if current_user.is_authenticated %}
-        <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
+        <form action="{{ url_for('entry.add_entry') }}" method="post" class="add-entry">
             <dl>
                 <dt>Title:</dt>
                 <dd><input type="text" size="30" name="title"/></dd>
