--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,9 +12,9 @@
             <h1>Flaskr</h1>
             <div class="metanav">
                 {% if current_user and current_user.is_authenticated %}
-                    <a href="{{ url_for('logout') }}">Logout</a>
+                    <a href="{{ url_for('auth.logout') }}">Logout</a>
                 {% else %}
-                    <a href="{{ url_for('login') }}">Login</a>
+                    <a href="{{ url_for('auth.login') }}">Login</a>
                 {% endif %}
             </div>
 
