--- a/app/auth/templates/signup.html
+++ b/app/auth/templates/signup.html
@@ -1,17 +1,13 @@
+{% from 'components/field.html' import render_field %}
 {% extends "layout.html" %}
 {% block body %}
     <h2>Sign Up</h2>
 
-    {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}</p>
-    {% endif %}
-
-    <form action="{{ url_for('auth.signup') }}" method="post">
+    <form action="{{ request.url }}" method="post">
+        {{ form.csrf_token }}
         <dl>
-            <dt>Username:</dt>
-            <dd><input type="text" name="username"/></dd>
-            <dt>Password:</dt>
-            <dd><input type="password" name="password" autocomplete="off"/></dd>
+            {{ render_field(form.username) }}
+            {{ render_field(form.password) }}
             <dd><input type="submit" value="Sign Up"/></dd>
         </dl>
     </form>
