--- a/app/entry/templates/show_entries.html
+++ b/app/entry/templates/show_entries.html
@@ -1,12 +1,12 @@
+{% from 'components/field.html' import render_field %}
 {% extends "layout.html" %}
 {% block body %}
     {% if current_user.is_authenticated %}
-        <form action="{{ url_for('entry.add_entry') }}" method="post" class="add-entry">
+        <form action="{{ request.url }}" method="post" class="add-entry">
+            {{ form.csrf_token }}
             <dl>
-                <dt>Title:</dt>
-                <dd><input type="text" size="30" name="title"/></dd>
-                <dt>Text:</dt>
-                <dd><textarea name="text" rows="5" cols="40"></textarea></dd>
+                {{ render_field(form.title) }}
+                {{ render_field(form.text) }}
                 <dd><input type="submit" value="Share"/></dd>
             </dl>
         </form>
